Fix filtering jobs
