# utils/types.ts
@@ -11,8 +11,7 @@ export type SearchParams = ActiveFilters & { [key: string]: any };
 // Response types
 export type Jobs =
   paths["/{language}/jobs"]["get"]["responses"]["200"]["content"]["application/json"];
-export type ActiveFilters =
-  paths["/{language}/jobs"]["get"]["responses"]["200"]["content"]["application/json"]["activeFilters"];
+export type ActiveFilters = components["schemas"]["ActiveFilters"];
 export type Job = components["schemas"]["Job"];
 export type Filters = components["schemas"]["Filters"];
 
@@ -21,7 +20,6 @@ export type ActiveFilterName = keyof NonNullable<ActiveFilters>;
 // Query types
 
 // Make sure boardId is required
-export type JobsQuery = paths["/{language}/jobs"]["get"]["parameters"]["query"];
 export type ApplyQuery = components["schemas"]["apply_body"];
 
 // Filters types
